--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: > # this means to ignore newlines until "baseurl:"
   This site is made by Naveen M V. It consists of his ideas, works and thoughts.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://naveenmv.com" # the base hostname & protocol for your site
-twitter_username: Naveen97
+twitter_username: IamNaveenMV
 github_username:  Naveen97
 
 # Build settings
